# research-linear-algebra

./: CMakeLists.txt  README.md  main.cpp
include/: Determinant.h  MatrixAddition.h  MatrixMultiplication.h  MatrixScalarMultiplication.h  SparseMatrix.h
src/: Determinant.cpp  MatrixAddition.cpp  MatrixMultiplication.cpp  MatrixScalarMultiplication.cpp  SparseMatrix.cpp
